# ci

adas_project/: BUILD  CMakeLists.txt  JenkinsFile  WORKSPACE
adas_project/ansible/: deploy.yml  inventory
adas_project/include/: perception.hpp
adas_project/src/: main.cpp  perception.cpp
adas_project/tests/: test_perception.cpp
